Smoke flow force field not working with Mantaflow Gas #74060

Closed
opened 2020-02-21 03:38:52 +01:00 by Pierre Puentes · 45 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: (optional)

Short description of error
I'm making a smoke simulation with Blender 2.82 and I'm trying to guide a particle system with a smoke flow field (like this video: https://www.youtube.com/watch?v=iddFzef4H6E). Both normal velocity and gravity are in 0 but particles don't move at all. Should I change something else with the new simulation framework?

Exact steps for others to reproduce the error
Create a smoke simulation, create an object with a particle system with both normal velocity and gravity field weight with a value of 0, create a smoke flow force field with the smoke domain object of the smoke simulation

bug_gas _blender.zip

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: (optional) **Short description of error** I'm making a smoke simulation with Blender 2.82 and I'm trying to guide a particle system with a smoke flow field (like this video: https://www.youtube.com/watch?v=iddFzef4H6E). Both normal velocity and gravity are in 0 but particles don't move at all. Should I change something else with the new simulation framework? **Exact steps for others to reproduce the error** Create a smoke simulation, create an object with a particle system with both normal velocity and gravity field weight with a value of 0, create a smoke flow force field with the smoke domain object of the smoke simulation [bug_gas _blender.zip](https://archive.blender.org/developer/F8355473/bug_gas__blender.zip)
Author

Added subscriber: @pierreee1

Added subscriber: @pierreee1

#76674 was marked as duplicate of this issue

#76674 was marked as duplicate of this issue

#76321 was marked as duplicate of this issue

#76321 was marked as duplicate of this issue

#75976 was marked as duplicate of this issue

#75976 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Germano Cavalcante self-assigned this 2020-02-21 20:33:01 +01:00

Did you try to change the Flow Source in the Flow settings?
https://docs.blender.org/manual/en/2.80/physics/smoke/types/flow_object.html#flow-source

This does not appear to be a bug.
For user support please use other channels:
https://www.blender.org/community/

Did you try to change the Flow Source in the Flow settings? https://docs.blender.org/manual/en/2.80/physics/smoke/types/flow_object.html#flow-source This does not appear to be a bug. For user support please use other channels: https://www.blender.org/community/

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Archived' to: 'Needs User Info'

Changed status from 'Archived' to: 'Needs User Info'

Oops, confirmed wrong report.

I see some dependency cycle in the file, so it would be best to resolve that.

Also it is not evident what does not work in this report. Is it particle system or force field?

Oops, confirmed wrong report. I see some dependency cycle in the file, so it would be best to resolve that. Also it is not evident what does not work in this report. Is it particle system or force field?

Changed status from 'Needs User Info' to: 'Archived'

Changed status from 'Needs User Info' to: 'Archived'

Ok I will change this again...

If you can demonstrate bug with simple case that would be acceptable. it is hard to debug complex solutions like this one

Ok I will change this again... If you can demonstrate bug with simple case that would be acceptable. it is hard to debug complex solutions like this one
Author

@mano-wii I'm not sure I should change the flow source. I changed it to the particle system but it didn't work either. @iss What it not working is the particle system. Normally with a smoke flow force field the particles shoud follow the smoke direction but they don't.

@mano-wii I'm not sure I should change the flow source. I changed it to the particle system but it didn't work either. @iss What it not working is the particle system. Normally with a smoke flow force field the particles shoud follow the smoke direction but they don't.
Author

Like this example: https://www.youtube.com/watch?v=Xkxvye9xA8o I woudn't know how to simplify the case

Like this example: https://www.youtube.com/watch?v=Xkxvye9xA8o I woudn't know how to simplify the case

In #74060#877833, @pierreee1 wrote:
@mano-wii I'm not sure I should change the flow source. I changed it to the particle system but it didn't work either...

Did you delete the cache?
smoke.gif

> In #74060#877833, @pierreee1 wrote: > @mano-wii I'm not sure I should change the flow source. I changed it to the particle system but it didn't work either... Did you delete the cache? ![smoke.gif](https://archive.blender.org/developer/F8359294/smoke.gif)

@pierreee1 sorry for misunderstanding I understand what problem is now

@mano-wii I have deleted the cache, and it works if you don't start from frame 1, but only once. Does playing simulation for second time work for you?

@pierreee1 sorry for misunderstanding I understand what problem is now @mano-wii I have deleted the cache, and it works if you don't start from frame 1, but only once. Does playing simulation for second time work for you?
Author

@mano-wii I didn't delete it bit I changed the cache's type to Replay and it works but with very strange results. @iss Using Modular type and deleting the cache also works once if I don't start from frame 1.

@mano-wii I didn't delete it bit I changed the cache's type to Replay and it works but with very strange results. @iss Using Modular type and deleting the cache also works once if I don't start from frame 1.

In #74060#877857, @iss wrote:
@pierreee1 sorry for misunderstanding I understand what problem is now

@mano-wii I have deleted the cache, and it works if you don't start from frame 1, but only once. Does playing simulation for second time work for you?

I was unable to replicate this problem here. (The baking works with the initial frame being 1, 2, 10 ...)

> In #74060#877857, @iss wrote: > @pierreee1 sorry for misunderstanding I understand what problem is now > > @mano-wii I have deleted the cache, and it works if you don't start from frame 1, but only once. Does playing simulation for second time work for you? I was unable to replicate this problem here. (The baking works with the initial frame being 1, 2, 10 ...)
Author

I’ll try making another sim from scratch. What steps did you take? Also, did you delete the whole cache folder?

I’ll try making another sim from scratch. What steps did you take? Also, did you delete the whole cache folder?
Author

Sill no luck @mano-wii @iss and I tried in a different machine: system-info.txt

With the Modular and Final type of cache the particles don't move, even if I make a change in the simulation domain settings and the smoke flow force field and re-bake the simulation nothing happens.

Captura de pantalla de 2020-02-26 10-25-16.png

When I use the Replay type of cache the particles move but don't follow the smoke as they should.

Captura de pantalla de 2020-02-26 10-32-33.png

smoke_flow.zip

Sill no luck @mano-wii @iss and I tried in a different machine: [system-info.txt](https://archive.blender.org/developer/F8373198/system-info.txt) With the *Modular* and *Final* type of cache the particles don't move, even if I make a change in the simulation domain settings and the smoke flow force field and re-bake the simulation nothing happens. ![Captura de pantalla de 2020-02-26 10-25-16.png](https://archive.blender.org/developer/F8373199/Captura_de_pantalla_de_2020-02-26_10-25-16.png) When I use the *Replay* type of cache the particles move but don't follow the smoke as they should. ![Captura de pantalla de 2020-02-26 10-32-33.png](https://archive.blender.org/developer/F8373210/Captura_de_pantalla_de_2020-02-26_10-32-33.png) [smoke_flow.zip](https://archive.blender.org/developer/F8373215/smoke_flow.zip)

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'

I will re-open this, because I have still problems even when starting from scratch.

I will re-open this, because I have still problems even when starting from scratch.

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann

Added subscriber: @nede123

Added subscriber: @nede123

Can someone please answer this and stop complaining about it being vague? particles don't follow mantaflow smoke, pretty simple question and it's not working for me either - same tutorial

Can someone please answer this and stop complaining about it being vague? particles don't follow mantaflow smoke, pretty simple question and it's not working for me either - same tutorial

Report is confirmed so we need developer to go over this now. I apologize for delaying this, but please be patient.

Report is confirmed so we need developer to go over this now. I apologize for delaying this, but please be patient.

Added subscriber: @aristotelis

Added subscriber: @aristotelis

This problem seems to be still around, tried the same with the other guys, same result. Particles don't follow the smoke..

This problem seems to be still around, tried the same with the other guys, same result. Particles don't follow the smoke..

Added subscriber: @kupiakos

Added subscriber: @kupiakos

@mano-wii If I'm understanding you, you've been able to get this working, correct? Would you be able to upload a sample blender file and instructions for reproduction? I've not been able to have Mantaflow smoke be affected by a particle force field, regardless of cache type or re-baking.

@mano-wii If I'm understanding you, you've been able to get this working, correct? Would you be able to upload a sample blender file and instructions for reproduction? I've not been able to have Mantaflow smoke be affected by a particle force field, regardless of cache type or re-baking.

Added subscribers: @EvertonSchneider, @brecht

Added subscribers: @EvertonSchneider, @brecht

I also reported this bug, merged here, didn't know about this report... sorry. I just want to tell my experience with this "inconsistency" in the smoke flow force field.
1 - While baking the smoke sim with replay cache mode the smoke flow force field seems to work ok(but I still find something strange... it's hard to set up and make it work well but this is another thing separated from the problem from this report...)
Screenshot from 2020-04-21 15-06-37.png
2 - After the smoke sim is cached and you change some of the settings from the smoke flow force field the inconsistency is apparent, the particles become totally different and even when you set the values back to where they are before the result from case 1 never came back... you need to clear the smoke cache and simulate again...
Screenshot from 2020-04-21 15-06-19.png

  • open the attached file;
  • start the playback and see the "right result" of particles motion advected by the smoke through the smoke flow force field;
  • after the smoke sim is cached try to change any value from the smoke flow force field like strength... the result is not anymore related to the smoke... and even bring the value back the result is different...

SmokeFlow_Inconsistency.blend

I also reported this bug, merged here, didn't know about this report... sorry. I just want to tell my experience with this "inconsistency" in the smoke flow force field. 1 - While baking the smoke sim with replay cache mode the smoke flow force field seems to work ok(but I still find something strange... it's hard to set up and make it work well but this is another thing separated from the problem from this report...) ![Screenshot from 2020-04-21 15-06-37.png](https://archive.blender.org/developer/F8489572/Screenshot_from_2020-04-21_15-06-37.png) 2 - After the smoke sim is cached and you change some of the settings from the smoke flow force field the inconsistency is apparent, the particles become totally different and even when you set the values back to where they are before the result from case 1 never came back... you need to clear the smoke cache and simulate again... ![Screenshot from 2020-04-21 15-06-19.png](https://archive.blender.org/developer/F8489576/Screenshot_from_2020-04-21_15-06-19.png) - open the attached file; - start the playback and see the "right result" of particles motion advected by the smoke through the smoke flow force field; - after the smoke sim is cached try to change any value from the smoke flow force field like strength... the result is not anymore related to the smoke... and even bring the value back the result is different... [SmokeFlow_Inconsistency.blend](https://archive.blender.org/developer/F8489568/SmokeFlow_Inconsistency.blend)

I also started a discussion about "exposing"(I'm not dev and don't know if it's a simple "expose" case) more properties from gas sim to be used by the smoke flow force field.
You can check it here:
https://devtalk.blender.org/t/update-smoke-flow-force-field/12761

I also started a discussion about "exposing"(I'm not dev and don't know if it's a simple "expose" case) more properties from gas sim to be used by the smoke flow force field. You can check it here: https://devtalk.blender.org/t/update-smoke-flow-force-field/12761

Well I found a very handy feature while investigating this bug and it's the viewport display setting inside mantaflow domain. The Debug Velocity option reveals that the velocity is calculated while the simulation runs but this information seems to be "released" or "cleaned" after the the smoke frames are baked.

While baking (Replay Mode)
Screenshot from 2020-04-27 12-16-19.png

After bake (Replay Mode)
Screenshot from 2020-04-27 12-16-33.png

Is there a way to store the velocity info with the cache?

Well I found a very handy feature while investigating this bug and it's the viewport display setting inside mantaflow domain. The Debug Velocity option reveals that the velocity is calculated while the simulation runs but this information seems to be "released" or "cleaned" after the the smoke frames are baked. While baking (Replay Mode) ![Screenshot from 2020-04-27 12-16-19.png](https://archive.blender.org/developer/F8497693/Screenshot_from_2020-04-27_12-16-19.png) After bake (Replay Mode) ![Screenshot from 2020-04-27 12-16-33.png](https://archive.blender.org/developer/F8497698/Screenshot_from_2020-04-27_12-16-33.png) Is there a way to store the velocity info with the cache?

Added subscriber: @sebbas

Added subscriber: @sebbas

Nice observation! This is indeed weird, because the velocity is also stored in the cache folder (if you see the cached data on the computer, there are velocity frames saved). Also in the shading process, the velocity data are not there either. Maybe @sebbas can explain us why this is happening? Could be to make the bakes lighter?

Nice observation! This is indeed weird, because the velocity is also stored in the cache folder (if you see the cached data on the computer, there are velocity frames saved). Also in the shading process, the velocity data are not there either. Maybe @sebbas can explain us why this is happening? Could be to make the bakes lighter?
Member

Added subscribers: @Stanislav-Shelestov, @ankitm

Added subscribers: @Stanislav-Shelestov, @ankitm

Any news on this report? Is Someone checking here?

Any news on this report? Is Someone checking here?

@EvertonSchneider That's a good point - the velocities are currently not loaded when reading the cache. I probably omitted them for optimization purposes. Will fix that!

@EvertonSchneider That's a good point - the velocities are currently not loaded when reading the cache. I probably omitted them for optimization purposes. Will fix that!

Added subscriber: @YuraKharitonow

Added subscriber: @YuraKharitonow

@sebbas Do you think that it is possible to keep the velocity data in the cache(I don't know exactly how it works so ignore my guessing)?
Also, what do you think that is causing the strange behavior with the smoke flow force field over particles? Do you know how to bring a similar behavior as before(old smoke system) or even better as discussed here ?
Or the smoke force field behavior is a separate issue here?

@sebbas Do you think that it is possible to keep the velocity data in the cache(I don't know exactly how it works so ignore my guessing)? Also, what do you think that is causing the strange behavior with the smoke flow force field over particles? Do you know how to bring a similar behavior as before(old smoke system) or even better as discussed [here ](https://devtalk.blender.org/t/update-smoke-flow-force-field/12761)? Or the smoke force field behavior is a separate issue here?

This issue was referenced by fe257cc384

This issue was referenced by fe257cc38410cb1ee4c458ca3120c15d25f9b1ab

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This is awesome! I can't express how nice is this... to be able to follow a bug begin smashed! Everything is working so nice now! Thank you all!!! Special thanks to @sebbas ! You're doing an awesome job! Thanks!
AdvectionAgain.mp4

This is awesome! I can't express how nice is this... to be able to follow a bug begin smashed! Everything is working so nice now! Thank you all!!! Special thanks to @sebbas ! You're doing an awesome job! Thanks! [AdvectionAgain.mp4](https://archive.blender.org/developer/F8540180/AdvectionAgain.mp4)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74060
No description provided.