Fix T74060: Smoke flow force field not working with Mantaflow Gas

cb252ca8d316 was also needed to fix the velocity loading from the cache.